--- a/Inutivent-iOS/Base.lproj/Main.storyboard
+++ b/Inutivent-iOS/Base.lproj/Main.storyboard
@@ -203,11 +203,67 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="O2N-MS-ntm">
+                            <rect key="frame" x="0.0" y="64" width="320" height="120"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QS5-9h-Cxb">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                </imageView>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WNA-KK-EVK">
+                                    <rect key="frame" x="0.0" y="119" width="320" height="1"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.10000000000000001" colorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="1" id="osz-uO-xXJ"/>
+                                    </constraints>
+                                </view>
+                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="Change Photo" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R6W-wR-LMi" customClass="INULabel">
+                                    <rect key="frame" x="8" y="96" width="308" height="24"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="24" id="AXd-vg-TdS"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <nil key="highlightedColor"/>
+                                    <size key="shadowOffset" width="0.0" height="0.0"/>
+                                </label>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e1u-JE-KvS">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <state key="normal">
+                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="onChangePhoto:" destination="uxj-Ne-B5v" eventType="touchUpInside" id="f4Q-5y-Ybm"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstItem="e1u-JE-KvS" firstAttribute="leading" secondItem="O2N-MS-ntm" secondAttribute="leading" id="55d-9w-CGp"/>
+                                <constraint firstItem="QS5-9h-Cxb" firstAttribute="leading" secondItem="O2N-MS-ntm" secondAttribute="leading" id="9cd-rV-eEC"/>
+                                <constraint firstAttribute="bottom" secondItem="WNA-KK-EVK" secondAttribute="bottom" id="Ivb-vP-2c3"/>
+                                <constraint firstItem="R6W-wR-LMi" firstAttribute="leading" secondItem="O2N-MS-ntm" secondAttribute="leading" constant="8" id="XgO-5A-EE3"/>
+                                <constraint firstItem="QS5-9h-Cxb" firstAttribute="top" secondItem="O2N-MS-ntm" secondAttribute="top" id="Xnt-xp-XE8"/>
+                                <constraint firstItem="e1u-JE-KvS" firstAttribute="top" secondItem="O2N-MS-ntm" secondAttribute="top" id="Ysm-n2-aYa"/>
+                                <constraint firstAttribute="trailing" secondItem="QS5-9h-Cxb" secondAttribute="trailing" id="dVL-PN-6ox"/>
+                                <constraint firstAttribute="trailing" secondItem="WNA-KK-EVK" secondAttribute="trailing" id="e5T-wk-afC"/>
+                                <constraint firstAttribute="bottom" secondItem="e1u-JE-KvS" secondAttribute="bottom" id="hnS-Gi-jQs"/>
+                                <constraint firstAttribute="trailing" secondItem="R6W-wR-LMi" secondAttribute="trailing" constant="4" id="kYD-hb-8bV"/>
+                                <constraint firstAttribute="trailing" secondItem="e1u-JE-KvS" secondAttribute="trailing" id="px1-W4-ugX"/>
+                                <constraint firstAttribute="bottom" secondItem="QS5-9h-Cxb" secondAttribute="bottom" id="qhV-Za-5gu"/>
+                                <constraint firstItem="WNA-KK-EVK" firstAttribute="leading" secondItem="O2N-MS-ntm" secondAttribute="leading" id="slS-g0-Izr"/>
+                                <constraint firstAttribute="bottom" secondItem="R6W-wR-LMi" secondAttribute="bottom" id="uXE-Eb-BdZ"/>
+                            </constraints>
+                        </view>
                         <sections>
                             <tableViewSection headerTitle="Title" id="WkG-vc-4yA">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="pCQ-v0-R92" customClass="INUInputTableViewCell">
-                                        <rect key="frame" x="0.0" y="119" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="239" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pCQ-v0-R92" id="4Qp-q2-aCb">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -219,7 +275,7 @@
                             <tableViewSection headerTitle="When" id="cDS-Tg-jLw">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="u98-h4-Bul" customClass="INUDateTableViewCell">
-                                        <rect key="frame" x="0.0" y="211" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="331" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="u98-h4-Bul" id="nmt-WO-dbb">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -231,7 +287,7 @@
                             <tableViewSection headerTitle="Details" id="HOT-vq-YYu">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="88" id="zMw-7J-MLG" customClass="INUTextTableViewCell">
-                                        <rect key="frame" x="0.0" y="303" width="320" height="88"/>
+                                        <rect key="frame" x="0.0" y="423" width="320" height="88"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zMw-7J-MLG" id="gk9-rn-evX">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="87"/>
@@ -243,7 +299,7 @@
                             <tableViewSection headerTitle="Host" id="txX-Og-cSy">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="qa1-2w-Sqd" customClass="INUInputTableViewCell">
-                                        <rect key="frame" x="0.0" y="439" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="559" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qa1-2w-Sqd" id="EVa-Sy-JUu">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -251,7 +307,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="yIh-mN-GaV" customClass="INUInputTableViewCell">
-                                        <rect key="frame" x="0.0" y="483" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="603" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="yIh-mN-GaV" id="bgQ-gV-R8K">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -280,9 +336,11 @@
                     </navigationItem>
                     <connections>
                         <outlet property="detailsCell" destination="zMw-7J-MLG" id="aAk-Vg-fHJ"/>
+                        <outlet property="imageView" destination="QS5-9h-Cxb" id="L5a-EM-qGw"/>
                         <outlet property="mailCell" destination="yIh-mN-GaV" id="og4-35-meq"/>
                         <outlet property="nameCell" destination="qa1-2w-Sqd" id="uen-yz-7c9"/>
                         <outlet property="titleCell" destination="pCQ-v0-R92" id="M1S-fi-1h5"/>
+                        <outlet property="titleLabel" destination="R6W-wR-LMi" id="rXP-ay-FbS"/>
                         <outlet property="whenCell" destination="u98-h4-Bul" id="LgB-pG-2g8"/>
                         <segue destination="JpP-N0-7Ei" kind="unwind" identifier="NewEventDone" unwindAction="unwindToList:" id="3kA-wy-daO"/>
                     </connections>
@@ -803,6 +861,9 @@ Inutilis Software</string>
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="O7P-yd-LCa" kind="modal" id="naq-pD-bQp"/>
+                                        </connections>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -829,6 +890,36 @@ Inutilis Software</string>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XyJ-9B-Han" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1749" y="-748"/>
+        </scene>
+        <!--Invite View Controller - Invite to Event-->
+        <scene sceneID="JcA-4Q-P1O">
+            <objects>
+                <viewController id="qB2-IX-wmP" customClass="INUInviteViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Iba-4r-nzp"/>
+                        <viewControllerLayoutGuide type="bottom" id="wbN-SX-qwb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="vHi-wE-kb1">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Invite to Event" id="bsB-v2-b2W">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="nWC-on-Cnv">
+                            <connections>
+                                <action selector="onCancel:" destination="qB2-IX-wmP" id="BzM-lq-Oqt"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="Edy-Zw-0rV">
+                            <connections>
+                                <action selector="onDone:" destination="qB2-IX-wmP" id="dGx-Sw-dYz"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qjl-0r-T7y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2670" y="-1556"/>
         </scene>
         <!--Posts Table View Controller-->
         <scene sceneID="gmw-Pz-tgY">
@@ -991,6 +1082,24 @@ Inutilis Software</string>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VHO-De-mC9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="68" y="18"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="2c7-il-SXN">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="O7P-yd-LCa" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Igk-9Z-EyQ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="qB2-IX-wmP" kind="relationship" relationship="rootViewController" id="eHi-Ks-vYR"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eWx-nD-woW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2214" y="-1556"/>
         </scene>
     </scenes>
     <resources>
