--- a/Inutivent-iOS/Base.lproj/Main.storyboard
+++ b/Inutivent-iOS/Base.lproj/Main.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="KWM-Dz-TqW">
     <dependencies>
+        <deployment defaultVersion="1536" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <scenes>
@@ -908,17 +909,17 @@ Inutilis Software</string>
                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Your e-mail address (optional)" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TEd-M2-1Pi">
-                                    <rect key="frame" x="81" y="8" width="224" height="26"/>
+                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Your e-mail address (optional)" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TEd-M2-1Pi">
+                                    <rect key="frame" x="88" y="8" width="217" height="28"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="26" id="mY7-d2-aPI"/>
+                                        <constraint firstAttribute="height" constant="28" id="mY7-d2-aPI"/>
                                     </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                     <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                                 </textField>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Reply to:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0J7-Hb-sgH">
-                                    <rect key="frame" x="15" y="12" width="58" height="17"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <rect key="frame" x="15" y="12" width="65" height="20"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
@@ -933,7 +934,7 @@ Inutilis Software</string>
                                 <constraint firstAttribute="trailing" secondItem="dvy-n5-gDj" secondAttribute="trailing" constant="15" id="csb-Nt-mjL"/>
                                 <constraint firstAttribute="trailing" secondItem="9Ce-M8-B2k" secondAttribute="trailing" constant="15" id="k7f-V0-BTG"/>
                                 <constraint firstItem="0J7-Hb-sgH" firstAttribute="leading" secondItem="3lA-3X-Wqz" secondAttribute="leading" constant="15" id="mQe-fq-Uj0"/>
-                                <constraint firstItem="dvy-n5-gDj" firstAttribute="top" secondItem="TEd-M2-1Pi" secondAttribute="bottom" constant="16" id="sAc-IY-c4i"/>
+                                <constraint firstItem="dvy-n5-gDj" firstAttribute="top" secondItem="TEd-M2-1Pi" secondAttribute="bottom" constant="14" id="sAc-IY-c4i"/>
                                 <constraint firstItem="0J7-Hb-sgH" firstAttribute="top" secondItem="3lA-3X-Wqz" secondAttribute="top" constant="12" id="utE-DA-YBC"/>
                                 <constraint firstAttribute="trailing" secondItem="TEd-M2-1Pi" secondAttribute="trailing" constant="15" id="xix-pU-5Ab"/>
                             </constraints>
@@ -960,7 +961,7 @@ Inutilis Software</string>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Add recipient" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="dHx-Uj-KGQ">
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
